Fix mobile layout overflow of menu bar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,5 +9,9 @@
 
 .primary-toolbar .status {
   margin-right: 10px;
-  font-size: 80%;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: right;
+  font-size: 75%;
 }
